<resources>
    <string name="app_name">Linkz-Translator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="speech_to_speech">Speech To Speech</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="text_to_text">Text To Text</string>
    <string name="text_to_speech">Text To Speech</string>

    <!--TranslationTask-->
    <string name="wait_for_moment">Please wait for a moment…</string>

    <!--SpeechToSpeechFragment-->
    <string name="speechToTextEndPoint">https://stream.watsonplatform.net/speech-to-text/api</string>
    <string name="speak">Tap to Speak</string>
    <string name="translate">Translate</string>
    <string name="input_speech">Input Speech</string>
    <string name="timer">Timer: </string>
    <string name="_00_05_00">00:05:00</string>
    <string name="_00_00_00">00:00:00</string>

    <!--TextToTextFragment-->
    <string name="target_language">Target Language</string>
    <string name="enter_text_here">Input Text here…</string>
    <string name="your_translated_text_here">Your translated text here…</string>

    <!--TextToSpeechFragment-->
    <string name="tap_to_listen">Tap to Listen</string>
    <string name="your_input_speech_will_be_displayed_here">Your input speech will be displayed here…</string>
    <string name="voice">Voice</string>

    <!--SignUpActivity-->
    <string name="please_wait">Please Wait</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_error">Please enter your name</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Please enter a password of minimum 8 characters</string>
    <string name="error">An error has encountered</string>
    <string name="registering">Registering to Linkz_Translator…</string>

    <!--LoginActivity-->
    <string name="no_account">Please Register first</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Feild Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="google_signin_failed">Google SignIn Failed</string>
    <string name="logging">Logging to Linkz_Translator…</string>
    <string name="sign_out">Sign Out</string>
    <string name="retrieving_user_data">Retreiving User data...</string>
</resources>
