<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    tools:context="com.example.admin.translator.fragments.SpeechToTextFragment">

    <LinearLayout
        android:id="@+id/speakButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:padding="@dimen/padding8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/speaker_radius"
            android:layout_height="@dimen/speaker_radius"
            android:src="@drawable/speaker"
            android:layout_gravity="center"
            app:civ_border_color="@color/red"
            app:civ_border_width="@dimen/speaker_border_width"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize20sp"
            android:text="@string/speak"
            android:gravity="center"
            android:padding="@dimen/padding8dp"
            android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding8dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textSize="@dimen/textSize25sp"
            android:layout_marginRight="16dp"
            android:textColor="@color/dark_blue"/>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize25sp"
            android:text="@string/_00_05_00"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height_100dp"
        android:layout_margin="8dp"
        android:textSize="@dimen/textSize20sp"
        android:padding="@dimen/padding8dp"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:hint="@string/your_input_speech_will_be_displayed_here"
        android:background="@drawable/rounded_edittext"/>

</LinearLayout>
